Spurious warning: You have called ADD_LIBRARY for library ... without any source files. This typically indicates a problem with your CMakeLists.txt file
Since target_sources
allows to add source files to a target after it's added, it seems that this warning is now wrong. I've found this discussion of the subject from two years ago, but the latest version still includes this warning.